vlib/v/parser/tests/generic_imp_symbol_struct_field_err.vv
import math.vec { vec3 }

struct Veca {
	field vec3[f64]
}
